# tesseract-table-parser

./: CMakeLists.txt  README.md  apple10k.tsv  main  main.cpp  myStructs.cpp  myStructs.h
app/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/OCR_Elements/: OCR_Elements.cpp  OCR_Elements.h
